--- a/linux.html
+++ b/linux.html
@@ -1,9 +1,3 @@
 index of 
 hii this is vishal[H
-
-[H
-
-[B[B[B
-[B[B
-[D[B[B[B[B[B[B[B[B[B[B[B[B[B[B[B[B
-[Ahii[C[F[C[C[B[B[A[B
+new add by me
